--- a/data-config-tool/index.html
+++ b/data-config-tool/index.html
@@ -22,7 +22,9 @@
       };
       
       // 使用固定的 SDK 地址（写死为 demo 环境）
-      const sdkUrl = 'https://demo.kwaidoo.com/zbyth/process/wp-core/api/getPanelXSdk';
+      // const sdkUrl = 'https://demo.kwaidoo.com/zbyth/process/wp-core/api/getPanelXSdk';
+      //生产url
+      const sdkUrl = 'http://10.238.171.159:8090/wp-core/api/getPanelXSdk';
       const script = document.createElement('script');
       script.src = sdkUrl;
       script.onload = function() {
