--- a/data-config-tool/index.html
+++ b/data-config-tool/index.html
@@ -13,7 +13,7 @@
     <script>
       // SDK 配置
       window.SDK_CONFIG = {
-        devDefaultBaseUrl: 'https://demo.kwaidoo.com/zbyth/process',
+        devDefaultBaseUrl: 'http://10.238.171.159:8090',
         busDomainCode: 'OctoCM_BDYTH',
         // 数据源管理 panelCode
         dataSourcePanelCode: 'OctoCM_BDYTH_IML_00005',
