--- a/data-config-tool/index.html
+++ b/data-config-tool/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>数据表管理工具</title>
-  <!-- 加载 PanelX SDK (preload.js 会自动加载 SDK) -->
-  <script src="/preload.js" devSdkUrl="http://183.6.70.7:24689/wp-core/api/getPanelXSdk"></script>
+  <script src="./preload.js" devSdkUrl="https://demo.kwaidoo.com/zbyth/process/wp-core/api/getPanelXSdk"></script>
 </head>
 
 <body>
