--- a/data-config-tool/index.html
+++ b/data-config-tool/index.html
@@ -11,7 +11,9 @@
 <body>
   <div id="root"></div>
 
-  <script>
+  <script type="module">
+    import { tryLoadGpfLoginToken, isLocalDevelopment } from './src/lib/sdk.js';
+
     // SDK 配置
     window.SDK_CONFIG = {
       devDefaultBaseUrl: 'https://demo.kwaidoo.com/zbyth/process/',
@@ -22,39 +24,69 @@
       tablePanelCode: 'OctoCM_BDYTH_IML_00003'
     };
 
+    async function ensureLogin(sdk, loginPayload, parentUrl) {
+      if (window.self !== window.top) {  // 在 iframe 中
+        try {
+          // 尝试获取父窗口 URL
+          parentUrl = parentUrl || window.parent.location.href;
+        } catch (e) { console.warn("Cannot access parent location", e); }
+
+        console.log('[SDK] 检测到在 iframe 中运行，父窗口 URL:', parentUrl);
+
+        if (parentUrl) {
+          // 尝试加载 GPF token
+          tryLoadGpfLoginToken(sdk, parentUrl);
+        }
+
+        // 检查是否登录成功
+        if (!sdk.user.isAuthenticated()) {
+          throw new Error("Iframe 环境下用户未登录且无法加载 GPF Token");
+        }
+        console.log('[SDK] GPF Token 加载成功，跳过默认登录');
+
+      } else {  // 不在 iframe 中
+        if (!sdk.user.isAuthenticated()) {
+          if (isLocalDevelopment(window.location.hostname)) {
+            // 执行默认登录
+            console.log('[SDK] 用户未登录，开始登录流程');
+            await sdk.user.login(loginPayload);
+            console.log('[SDK] 登录成功');
+          } else {
+            throw new Error("用户未登录，无法访问系统");
+          }
+        } else {
+          console.log('[SDK] 用户已登录，跳过登录流程');
+        }
+      }
+    }
+
     // 等待 PanelXSdk 类加载完成后再初始化
-    (function initSDK() {
+    (async function initSDK() {
       // 检查 PanelXSdk 是否已加载
       if (typeof PanelXSdk !== 'undefined') {
-        // 初始化 SDK
-        window.panelxSdk = new PanelXSdk({
-          devDefaultBaseUrl: window.SDK_CONFIG.devDefaultBaseUrl,
-          busDomainCode: window.SDK_CONFIG.busDomainCode
-        });
-        console.log('[SDK] PanelX SDK 初始化成功');
+        try {
+          // 初始化 SDK
+          window.panelxSdk = new PanelXSdk({
+            devDefaultBaseUrl: window.SDK_CONFIG.devDefaultBaseUrl,
+            busDomainCode: window.SDK_CONFIG.busDomainCode
+          });
+          console.log('[SDK] PanelX SDK 初始化成功');
 
-        // 触发自定义事件通知 React 应用 SDK 已就绪
-        window.dispatchEvent(new CustomEvent('sdkReady'));
-
-        // 检查是否已经登录
-        if (window.panelxSdk.user.isAuthenticated()) {
-          console.log('[SDK] 用户已登录，跳过登录流程');
-          window.sdkLoggedIn = true;
-          window.dispatchEvent(new Event('sdkLoggedIn'));
-        } else {
-          // 未登录，执行登录
-          console.log('[SDK] 用户未登录，开始登录流程');
-          window.panelxSdk.user.login({
+          // 执行登录检查
+          await ensureLogin(window.panelxSdk, {
             userName: 'admin',
             password: '123456'
-          }).then(function (res) {
-            console.log('[SDK] 登录成功', res);
-            window.sdkLoggedIn = true;
-            window.dispatchEvent(new Event('sdkLoggedIn'));
-          }).catch(function (error) {
-            console.error('[SDK] 登录失败', error);
-            alert('登录失败: ' + error.message);
           });
+
+          // 所有流程通过，触发事件
+          window.sdkLoggedIn = true;
+          window.dispatchEvent(new CustomEvent('sdkReady'));
+          window.dispatchEvent(new Event('sdkLoggedIn'));
+
+        } catch (error) {
+          console.error('[SDK] 初始化或登录失败', error);
+          alert('登录失败: ' + (error.message || '未知错误'));
+          throw error;
         }
       } else {
         // 如果还未加载，100ms 后重试
